Change text selection color Fix playlist and navbar alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -42,6 +42,11 @@ html,
   --scrim: rgba(0, 0, 0, 0.9);
 }
 
+::selection {
+  background: var(--brand-primary);
+  color: #ffffff;
+}
+
 /* Default Colors */
 .App * {
   --text: var(--text-light);
