--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -6,7 +6,6 @@
   justify-content: space-between;
   justify-self: center;
   width: 100%;
-  height: 40px;
   max-width: 479px;
   align-items: center;
 }
